--- a/deployment-definition.yml
+++ b/deployment-definition.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: nginx
-          image: nginx
+          image: nginx:1.21.3
   selector:
     matchLabels:
       app: myapp
